# ChangeLog for app-benchmarks/phoronix-test-suite
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-benchmarks/phoronix-test-suite/ChangeLog,v 1.27 2013/09/09 04:45:54 patrick Exp $

*phoronix-test-suite-4.8.2 (09 Sep 2013)

  09 Sep 2013; Patrick Lauer <patrick@gentoo.org>
  +phoronix-test-suite-4.8.2.ebuild:
  Bump

*phoronix-test-suite-4.8.1 (04 Sep 2013)

  04 Sep 2013; Patrick Lauer <patrick@gentoo.org>
  +phoronix-test-suite-4.8.1.ebuild:
  Bump

*phoronix-test-suite-4.8.0 (29 Aug 2013)

  29 Aug 2013; Patrick Lauer <patrick@gentoo.org>
  +phoronix-test-suite-4.8.0.ebuild:
  Bump

*phoronix-test-suite-4.6.1 (13 Jun 2013)

  13 Jun 2013; Patrick Lauer <patrick@gentoo.org>
  +phoronix-test-suite-4.6.1.ebuild:
  Bump

*phoronix-test-suite-4.6.0 (03 Jun 2013)

  03 Jun 2013; Patrick Lauer <patrick@gentoo.org>
  +phoronix-test-suite-4.6.0.ebuild:
  Bump

*phoronix-test-suite-4.4.1 (10 Apr 2013)

  10 Apr 2013; Patrick Lauer <patrick@gentoo.org>
  +phoronix-test-suite-4.4.1.ebuild, -phoronix-test-suite-2.8.1-r1.ebuild,
  -phoronix-test-suite-3.2.1.ebuild, -phoronix-test-suite-3.8.0.ebuild:
  Bump

*phoronix-test-suite-4.4.0 (04 Apr 2013)

  04 Apr 2013; Patrick Lauer <patrick@gentoo.org>
  +phoronix-test-suite-4.4.0.ebuild:
  Bump

*phoronix-test-suite-4.2.0 (22 Mar 2013)

  22 Mar 2013; Patrick Lauer <patrick@gentoo.org>
  +phoronix-test-suite-4.2.0.ebuild:
  Bump

*phoronix-test-suite-4.0.1 (27 Aug 2012)

  27 Aug 2012; Patrick Lauer <patrick@gentoo.org>
  +phoronix-test-suite-4.0.1.ebuild:
  Bump for #427724

*phoronix-test-suite-3.8.0 (22 Mar 2012)

  22 Mar 2012; Patrick Lauer <patrick@gentoo.org>
  +phoronix-test-suite-3.8.0.ebuild:
  Bump for #389285

  22 Mar 2012; Patrick Lauer <patrick@gentoo.org>
  phoronix-test-suite-3.2.1.ebuild:
  Fixing php deps for #400665

  14 Dec 2011; Matti Bickel <mabi@gentoo.org>
  phoronix-test-suite-2.8.1-r1.ebuild, phoronix-test-suite-3.2.1.ebuild: