@@ -8,6 +8,7 @@ DIST phoronix-test-suite-4.6.1.tar.gz 510999 SHA256 882193e590f54490a15e981bea23
 DIST phoronix-test-suite-4.8.0.tar.gz 521276 SHA256 bb1d0f96b40bd4a0a4eb18312dbfc1d5386fbb6e8885cc49367ad8bd9a3172dc SHA512 a25f7e2d91f97b2bc092dc4bb85ee8f3672fc2aa76194547342bdfe2a7995054c5d653017629733a1e1b1b98b42917af9fd9892c2dd6ae0da18c527c8b3abf71 WHIRLPOOL 14f004738935fe16cdc35a16a70082609eee8ca3402c8dd3878afb531f2d35a54274d2f78061d999c8579d7e13e3b93605778bf4493799de87c56992b5ef361f
 DIST phoronix-test-suite-4.8.1.tar.gz 522015 SHA256 95704493be071110d887d73dd1ded7487af5d3ea4fa4b852cd856f85d025bc8f SHA512 27a0c036d15ab1e307b2800ad53fac029658dab3a24fa1686ab8c3a5b9c9536b6910f718461654fda408fe3500f54f6f50003093337b3c62a121889f1eb8504c WHIRLPOOL 7446b7873133544adfa8e57041e8c07a052004a39eca2c7f1b2298a57ce579757735cd96c2c0058fc0bbb2c1516ea746c9ee35a85ec970185c8a09e52f87a2f3
 DIST phoronix-test-suite-4.8.2.tar.gz 521572 SHA256 f6722c48dcfafc38803a38e660879cc38290e1c4b5740e75edabc769c3f490df SHA512 5e13a385bd75f79dea24747626eff4e6daf1fd3bcc143cee461ccd09c95ba0ce58bf4457d32021e953c0a7a1b53d8fb50c0ac9afe60369ccf172061e648d2a76 WHIRLPOOL 8ce1e5c329953b497d42d31c03fc30c47834070afd3ba8c4b6e7e7be3cd82bb9e9f4334fa4c148eee59f95cd001ea0ae9c6fcd343e8a83bea1e15968dd003391
+DIST phoronix-test-suite-4.8.3.tar.gz 521992 SHA256 75d5c13f0c4bde749d6bcf47ab4e8a34ba6d754c2f6034327b6c46e49dc94e57 SHA512 902ff3f9ca6738524796f30d790e6f32a41b3508fea10235df66cd3431a01692ab25ee062ba981caa9aa5a5325874096757cc03484ea41046ac3270588f0c4dd WHIRLPOOL f050c6f51f5daa40b0e5a75db66f2ae0739cbc57b1fd625ec14bfff3d19b4c616c6c7404c1f4fc6c9c5dca2c47cf8927a0a9b230da037b3ab2f21ac361f7f2ec
 EBUILD phoronix-test-suite-4.0.1.ebuild 3383 SHA256 6f7b4657efac6ae9200b9c78f8ce0b533bd42316919ea45d0147787b76147ee1 SHA512 ee242ccd39540621e17d5521c9d7a12b379a1b3a791a43f99561d40d26317dcef31827cf874839eec5ab64b408f66fb4599e1019c20bf7841f9ff87aaadd106e WHIRLPOOL c3c2c95dc84394220c4bf6bddb680bca285a90d090fd8e01217ac117218cc4c3fdfbbf1030ff7680aab77d77264bda70323b09417dc72690e289410b2e50524c
 EBUILD phoronix-test-suite-4.2.0.ebuild 3383 SHA256 1a62c4053b70c00f7a51a73476e902a8054fe43e5da3aaf90cd65a2ce6420c30 SHA512 e5f1f71b2a1afd46f7adcf2cafe2cfaa640ab70f83f488bb6d637d444cc847d2c0617887b9e2b66d92cbda1b0a22bc353c1b8eacde956a59c85b8e9d5a07af82 WHIRLPOOL c7c2201050531f006b8af96cc3b045412105ff6c8f8d7c9d40f9b37cbf52188bce887886638fea58332ffe9b76095ab0c86e2965d95c81a26abe8cf0b9c16513
 EBUILD phoronix-test-suite-4.4.0.ebuild 3383 SHA256 2c5659949e012be52f1225dff6269169fa5ed5d8dcf16993c730b1f386a4ca78 SHA512 2a7b6e1d2fac6f9061cce17725b49f4f56277cab50d1cd346e286f49cb36491cafe6979260540b972211594b982c772a72e8d729f7772b757803253831d47e9e WHIRLPOOL dbe2e9a737303372d69383783c72fef55833f7c004ff1a7d6116ab9d3c992d150a0a93f3e833c155d79cf770a4549ea81b79fedcfe4b7b6e3cb3130731c78ce3
@@ -17,5 +18,6 @@ EBUILD phoronix-test-suite-4.6.1.ebuild 3386 SHA256 7b5c60442abdc3b35b3b352feeec
 EBUILD phoronix-test-suite-4.8.0.ebuild 3386 SHA256 ba2b853cfd506f21c7ec5c33983623f5065afb56a4b627fd982437945896c018 SHA512 1aabdf9f8d06f7662d82aee555d902ad1c006ae8912dd0545732253ab826a44009714a0183d5f78ada5e8799cd49c28b271e180f6b20299a3dbeb49d81400c69 WHIRLPOOL 6437d69780a39043772d6fcef8d7aa7b909feae4fa51c2cad53221c0e2f833bde064d02a6c16cb685a234fdfa0ee7221f20cceaf54f2d5edfbb7d2591686e0b4
 EBUILD phoronix-test-suite-4.8.1.ebuild 3386 SHA256 d5dd5bb16f502b03e8fd6d68e1cbae832581fc83020d4a9385db388f2e20b247 SHA512 f4d3f9dd3b8a4af532fd5446c8fed512f32846c6f6e9af794cde39fa2d0365a3291f878f49b2ee1245e3460bf6e38ae0b99e8c1672a334827ef6849355037b68 WHIRLPOOL c01d3b5432c212f865af8799a13a6e16b02ef404513934351e41681e2e22bddaff3397b8346916acccaea270dd4d43a651ed62f663998de335cd76a31d25fedb
 EBUILD phoronix-test-suite-4.8.2.ebuild 3386 SHA256 64528f97a59ecdb058c7f8d7074accc3455011d5289b388bea24d0bafb8974bb SHA512 afb2aef15dc4e9cd0313b1e6597d7fc15d3e46a9d6fa694d621587917bc547f718f79fe5dd6e7408fc5444d188c0611c99c3be859057334f7782c45d762ce16e WHIRLPOOL 80ba8710df668271b5a8f0e4e35aff59655749e6187a3bc48326ec0f5c3a8a5270364643a6a217758c1a28a3a89c3fb49bfbdb2a5051fcbba07a87f10fd214b6
-MISC ChangeLog 4668 SHA256 ab0d1bb590cc10864f6c5d4373042023ae2d02d31de9b714c3eda9ed1fa07750 SHA512 811807a56a54da1156b82c6d2297252528bf98f6ef2eaca3360c6aa5726b00f7863431bf5c1038c7c94fea85116b5a7b2060f56e29323c9d048a557410674a90 WHIRLPOOL 7aed4df9cb883adf8ee416f5615cdba0e90e79b287137f25b99284f57345c05e9cdfa26eb7435c30f5c2ee31dae766a06149142c20667313fe201801b2d9362a
+EBUILD phoronix-test-suite-4.8.3.ebuild 3386 SHA256 2dfb08540b7b1c73873b3865e884780b65667161b618e965c0679154676974da SHA512 0e8117281b19f01c70827e8c598c1342e2c5f8d10c82f660702fdefecb3dfd32587b65c656da53e576bced21adbae56f5e982854674cb68f53c00636b41bb42c WHIRLPOOL d68470947ca36439f2aa1a253168767c77f53c26a20f7f7342d4867eb64b2118952ecd58832c44be47a88203ae3a7656fbb8774d384adbca330dadcb5b090ff2
+MISC ChangeLog 4805 SHA256 b763e0df999cef99cb7fcfdba1bce78ee5f87411d241a4c7cfd7ae6c41007085 SHA512 3fdcd9deba20b2f6ca97e408706d3694dbf02b2ee42748a804777fb8d7577af520c9bbcf4de99ab26eaf08af97e8617d5cf05606d6a0e80e2c18ffc7aa65167b WHIRLPOOL 5fc2dfe07ceb856e1a9aa1ee70b8002d715fc6eca09154615c0a94f4687a2e7804503c6fb034186d99974f8e306eff8d7dae799da76b989f6a5e85cd47337c52
 MISC metadata.xml 259 SHA256 33ff114274f223a0385a54254536f9d2078f12a84a6779a6739341c024cec67a SHA512 10db7e564acee3578a4a18ed026fd9d54d9dd505cdb7d89e3e0e9b3fbbab8b97a9a8899e0b9958ea2f871f423f92e2850539b7ad5cf863f6215017323433074f WHIRLPOOL f0ddafd2b30dc55c2459b8a94eb7309f66cb8f79d2a887c38774491d1012a04c38d34fb97371585c33fc8a10a44d18746298df795467774d8d5a8758364b4dd2
