@@ -8,8 +8,11 @@ DIST slony1-2.1.4-docs.tar.bz2 1360684 SHA256 e7d8c1939e0e2cf34614940f62c4fc0ce1
 DIST slony1-2.1.4.tar.bz2 1515755 SHA256 90dc746bb9f12a051f9f563365e693ffd81f07a2353debfc4b8a4d0884ca72a4 SHA512 b882146a158adee27f360fc34d3c64144efe3c3a7d63574a4450cb1eb3dac7d75df19d17e75ffc72f656d27b5c5b7fc64bc536de9753a36fe96848b562e42883 WHIRLPOOL c0b95f72049b7f90caf1c2259c8f97411f0b1f1d5c9a6cc4fd6b1b2e677dec3fbbea84ffaffb0ba15caa40203923c8272ac6cccae8e08a51f83c62b765ce2580
 DIST slony1-2.2.0-docs.tar.bz2 1429244 SHA256 4a97d3c3e9e8e12257a6fcabfeb65ced02b34f211f9154a0d3d8c85dda575070 SHA512 2d55e8d3066525e3bf3f70d5e9ea0f12279dbdc4708c5fff0076318c6cf70baa1d7b388e1846bacc65f1a42820113d38029afbfd8800cfd721c003f120f9b1cb WHIRLPOOL afe1d0e83a6e45c7f157c5eafe6bebd0bc372c7aec1ab126309fa026484a8175e37b99d6fc2ace31f0bbf84e651a62965eb7a532e5bc4a3c1ef3f5a2c71fb46d
 DIST slony1-2.2.0.tar.bz2 1467410 SHA256 38e0c78d50ab882bc0cff1801d28b69ef1f7d99a6e55b06fa20e2f4a08fa6049 SHA512 4d05dee4028408c78da068742b4adbcb2c1d37bfb480047f6ee4c59d167e13d340c2b644c45911d29dda8d626aac6fe79cad7f51a81bc5edaff14fa10be7b369 WHIRLPOOL 31253f8d760b16c0e1c77ffc83d8f936d6225b83124727603525180b2d134c6d650cc8b5c59334a3cd29ee058e59b539c1f5d857585b8d9a22631aba4ace2798
+DIST slony1-2.2.1-docs.tar.bz2 1445906 SHA256 7c8fdbe35a5738f38dd4a7774e3e5b3413916da6e3c7fba3bd5554b61e003d30 SHA512 6c213890d45612bd30f995286b6e7ce6c777274a9b96e040794707c1b28bf1337d27d8c1495e0824aafe950e615b2fea01f2c84cf491391132d29cf3fd28d322 WHIRLPOOL b94715e210c6db12e1d431bba2b602f6b8346226a71b058756acf73b449e42c5397979a19f7bd3074a7c8c9b707d001e09ec22be445e161600137e443632af1d
+DIST slony1-2.2.1.tar.bz2 1466866 SHA256 8606c2be3ad219fb8d482e5a0f836e37d26df3b49d5bce099fc71fd95961e960 SHA512 0b47180bb16e6d25eb3e6a280fe91bd2448bbf4b9ee10a8811f16bf0c2dbc7eb52d3c029d1fac5e3ff8f0621da3bc174d7deb7b72000c631664131aeb4c25e74 WHIRLPOOL 9c61161fbc87d1ad30dba0ec0274801109c30f8f4f33840337737c7201bb622739b313728ae1ab2c26864dfe8c87e295642000dde034795ddd81babaaef5dcbc
 EBUILD slony1-2.1.3.ebuild 1944 SHA256 222c30c5b98527416ee1b0f86bdcee53e60c67514c3467c7bbe7bbb806f6c627 SHA512 e931c5780c4c87a3348cdd3be097a36eedefde630a6d7da3ff07c3ec404e0053bbeda0bae460470b4dde3672e2ed014b42665901df9079642ac441990d1a8506 WHIRLPOOL d703a78c871bb4568de3bbfb0053e7789ce401d87f7bf131b78e4a273fdb2a4323c3534dbb660a8d4c42b28e448d2705c488791d28e561a502e4e3568d125a05
 EBUILD slony1-2.1.4.ebuild 1993 SHA256 cf689bf956c36416bcc794b441b8c93f6fb91bf332a036846569a2f4c0834f55 SHA512 8a604255d9c7ece400647d47409f19d4d98d83cd95373e0bc08c5dc6c435f531faddf2d4a6f302a2857dc22952f16f7e9d7bcf5bf5a034986be26321c72f09c5 WHIRLPOOL cb0ed306193c26dc083955485233ec0a640e324231976d93aef9b0df61c03bd80990f6bee3cb8259c37fb33314635d2da0b076a67243c8452479591d0f25494f
 EBUILD slony1-2.2.0.ebuild 1870 SHA256 d3d8b7550c632db108aa2295069c62f4b611ca24acb484d77c34d2b83c16d2a1 SHA512 ca2ffec425bc32160ee587dcdf2e7cc25a3b1c00f73fa8fd10cbacfd1210bb263504b49f42ac595204ed2c403b2975268334755fee07d81a3908f2110367d5d9 WHIRLPOOL 3360cff0dfecce4881d722dc537b14797c5bf0b00dfbef97094c08d0bf2d14fcf227ccd1763bdcb1391f809caf9a2cbad2e65c2e187cfdae9c4c3db07e72cc66
-MISC ChangeLog 6431 SHA256 bbd1b587165eab8befec9c505664d87cf8bdb84ed60bb2fda8d0a6282b03b0ff SHA512 d8fff6929810587d2a31462fca8381a2cf85a5ba20030ddd36eb965e660f88806e54f1e2c5bb1025c96523a0acbd01f38db2e3facf27131fa7f380a79b6c88fa WHIRLPOOL a2c23fe8ba757469404a577935ca6ddd6e2df60574e00a476cfe3f3fb4f29c89f5b95975ddd76c742810313e4534e6f555bdde7a6608741107f59db79bb7243f
+EBUILD slony1-2.2.1.ebuild 1870 SHA256 0c019fde7fe499c52364c41111eeadd812cab711794ebbaa242fd514a193429d SHA512 d99b723fe9181dbb3f82ebce561a36b40d518a4ceacdc7a14f0bc09abf0f65ae4e26a61beec992fd6661824c79f2d3c84e8e60acbea8ea04b3c59011080dcf4a WHIRLPOOL 64f6f7c6840f6c131cc7601173e629371b5de812f6142fbedf3fd73012c3ceeebc884965f8916bfc9c5ffd71d8d29ce51501cde3b12877777e000e46f98935b0
+MISC ChangeLog 6540 SHA256 0fff016d79fef4193d0f9fc0c793ecc3bdf39426680913fbe4e19bdcaa703e87 SHA512 676f9c82644c7f20ba37aba50030ba188072b4fe037cb538218776085f35832fdb2b8e814c7641a2e3b2cedd9f85e5a47dd0e6215c2e4f90e1bad7fcfa9f3d6b WHIRLPOOL 486aeca9616220c4d10aa89f782b51d212b5670e98c9fb252a2ceb02e623da83de440805d580d8fb02639ee33907d7d0017d16ce5370db84bd48348fd7a245e4
 MISC metadata.xml 164 SHA256 7e8e8126bc8701c4a42c7dfed8bb755ac6040fe3d0e3f994d888f8b2b4fa7d8b SHA512 45b3f5ba6ebbeb2f990e5612b545bee41bb8c9f29e7f31de34021384760fcfc4694de0782fc0bdf556fe81ed3b334fc96c33563b0fddc2545484099a2cd76bb2 WHIRLPOOL 5fd1b0fc651f51ed3d1715cff87d86e7c0fe9c7825529069c7c3fed13641aee24bee1971b6e1057797b7b191ef0d50a1ea68c9f24588872d7d960787f9f02bfa
