@@ -1,0 +1,11 @@
+DEFINED_PHASES=compile configure install prepare
+DESCRIPTION=Phoronix's comprehensive, cross-platform testing and benchmark suite
+EAPI=4
+HOMEPAGE=http://www.phoronix-test-suite.com
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-3
+RDEPEND=dev-lang/php[cli,curl,gd,json,posix,pcntl,truetype,zip] dev-php/pecl-ps
+SLOT=0
+SRC_URI=http://www.phoronix-test-suite.com/download.php?file=phoronix-test-suite-4.8.3 -> phoronix-test-suite-4.8.3.tar.gz
+_eclasses_=bash-completion-r1	d339dd40b2014cf1edba8592580eef42	eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=3a09d89e9bcc65eadb6f06a45dfd9e19
