@@ -1,0 +1,12 @@
+DEFINED_PHASES=configure install setup
+DEPEND=|| ( dev-db/postgresql-server:9.3 dev-db/postgresql-server:9.2 dev-db/postgresql-server:9.1 dev-db/postgresql-server:9.0 dev-db/postgresql-server:8.4 dev-db/postgresql-server:8.3 ) dev-db/postgresql-base[threads] perl? ( dev-perl/DBD-Pg )
+DESCRIPTION=A replication system for the PostgreSQL Database Management System
+EAPI=4
+HOMEPAGE=http://slony.info/
+IUSE=doc perl
+KEYWORDS=~amd64 ~ppc ~x86
+LICENSE=BSD GPL-2
+SLOT=0
+SRC_URI=http://main.slony.info/downloads/2.2/source/slony1-2.2.1.tar.bz2 http://main.slony.info/downloads/2.2/source/slony1-2.2.1-docs.tar.bz2
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=3cb9957809862ec259d04d168ef0f31b
