@@ -1,6 +1,12 @@
 # ChangeLog for app-benchmarks/phoronix-test-suite
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-benchmarks/phoronix-test-suite/ChangeLog,v 1.27 2013/09/09 04:45:54 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-benchmarks/phoronix-test-suite/ChangeLog,v 1.28 2013/11/27 04:08:40 patrick Exp $
+
+*phoronix-test-suite-4.8.3 (27 Nov 2013)
+
+  27 Nov 2013; Patrick Lauer <patrick@gentoo.org>
+  +phoronix-test-suite-4.8.3.ebuild:
+  Bump
 
 *phoronix-test-suite-4.8.2 (09 Sep 2013)
 
